--- a/src/app/recuperar-pass/recuperar-pass.page.html
+++ b/src/app/recuperar-pass/recuperar-pass.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Bienvenido!!
+      pantalla de cambio de contraseña!!
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,11 +9,11 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title size="large">recuperarPass</ion-title>
     </ion-toolbar>
   </ion-header>
 
   <div id="casilla">
     <ion-button expand="block" href="login">volver al login</ion-button>
   </div>
-
+</ion-content>
