--- a/src/app/menu/menu.page.html
+++ b/src/app/menu/menu.page.html
@@ -1,16 +1,22 @@
     <ion-header [translucent]="true">
       <ion-toolbar>
         <ion-title>
-          <ion-item>Bienvenido {{ nombreUsuario }}</ion-item>
+          <ion-item>Hola {{ nombreUsuario }} Bienvenido!</ion-item>
         </ion-title>
       </ion-toolbar>
     </ion-header>
-    <ion-content [fullscreen]="true">
+    <ion-content class="ion-padding">
       <!-- Contenido de la página de inicio -->
-      <ion-item>Bienvenido {{ nombreUsuario }}</ion-item>
+      <ion-card>
+      <ion-item position="center">
+        <ion-label>
+          <p>¿Como deseas ingresar?</p>
+        </ion-label>
+      </ion-item>
+      <ion-button expand="block" href="conductor">Como conductor</ion-button>
+      <br>
+      <ion-button expand="block" href="pasajero">Como pasajero</ion-button>
+      <br>
+      <ion-button expand="block" href="login">Cerrar sesion</ion-button>
+    </ion-card>
     </ion-content>
-
-
-  <div id="casilla">
-    <ion-button expand="block" href="login">volver al login</ion-button>
-  </div>
