--- a/src/app/conductor/conductor.page.html
+++ b/src/app/conductor/conductor.page.html
@@ -5,9 +5,29 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">conductor</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <form [formGroup]="formularioAuto">
+    <ion-item>
+        <ion-label position="floating">Marca del vehiculo:</ion-label>
+        <ion-input formControlName="marca"></ion-input>
+    </ion-item>
+
+    <ion-item>
+        <ion-label position="floating">Modelo:</ion-label>
+        <ion-input formControlName="modelo"></ion-input>
+    </ion-item>
+
+    <ion-item>
+        <ion-label position="floating">Patente:</ion-label>
+        <ion-input formControlName="patente"></ion-input>
+    </ion-item>
+
+    <ion-item>
+        <ion-label position="floating">Precio del viaje:</ion-label>
+        <ion-input formControlName="precio_viaje"></ion-input>
+    </ion-item>
+  </form>
+
+<!-- boton para iniciar -->
+  <br>
+  <ion-button expand="block" (click)="registrarAuto()">Registrar</ion-button>
 </ion-content>
